Updated auth info

--- a/preference_search.html
+++ b/preference_search.html
@@ -143,7 +143,7 @@
     function fetchImages() {
         const preferences = checkBox();
       const myHeaders = new Headers();
-      myHeaders.append("Authorization", "Bearer RGxdnvLXFikrmFpSs4xuATbHE60_lOLi78ed7IP_Z2SFF_oJjkHG7BgSg215dOnw5Q4eAwzn59OqX1XQWEGc3UaHc7f5oAp0-2XIOAJFaUDinRRiIFc0wxfaHXkFZ3Yx");
+      myHeaders.append("Authorization", "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX");
 
       const requestOptions = {
         method: "GET",
