--- a/public/preference_search.html
+++ b/public/preference_search.html
@@ -143,7 +143,7 @@
     function fetchImages() {
         const preferences = checkBox();
       const myHeaders = new Headers();
-      myHeaders.append("Authorization", "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX");
+      myHeaders.append("Authorization", "Bearer Hlly5I_FXnQvUD6vAGu83PHsd-wDsndntZySjj3L2RRq25dhbt9dJFJKcA_1sDZv-4O-CrYvtYPTILvz9EPhMLBpDQuIN3rprkU73HKtUcL9BrgHjhM2TcgCUVYXZ3Yx");
 
       const requestOptions = {
         method: "GET",
